Actions
Bug #8869
closedError on TestProcess#test_clock_getres
Bug #8869:
Error on TestProcess#test_clock_getres
ruby -v:
ruby -v: ruby 2.1.0dev (2013-09-06 trunk 42850) [i386-mswin32_110]
Backport:
Description
mswin32 において、下記のようなエラーが出ております。
- Error:
TestProcess#test_clock_getres:
Errno::EINVAL: Invalid argument
C:/ko1/src/ruby/trunk/test/ruby/test_process.rb:1743:inclock_getres' C:/ko1/src/ruby/trunk/test/ruby/test_process.rb:1743:intest_clock_getres'
11796 tests, 2230101 assertions, 0 failures, 1 errors, 78 skips
ruby -v: ruby 2.1.0dev (2013-09-06 trunk 42850) [i386-mswin32_110]
Updated by nobu (Nobuyoshi Nakada) about 13 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r42855.
Koichi, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
win32.c: clock_getres
- win32/win32.c (clock_getres): required as well as clock_gettime().
[ruby-dev:47699] [Bug #8869]
Actions